[Fix] Fixed some css spacing issues.

--- a/css/index.css
+++ b/css/index.css
@@ -213,11 +213,11 @@ p {
 }
 
 section{
-    padding: 20px ;
+    padding: 0px 20px ;
 }
 
 .about-section{
-    margin-top: -30px;
+   padding-bottom: 20px;
 }
 .about-section .about-text{
     margin: 0;
@@ -234,8 +234,8 @@ section{
 
 .about-column{
     width: 49%;
-    margin: 0;
-    padding: 50px 0 30px;
+    margin-bottom: 30px;
+    padding: 30px 0 40px;
 }
 
 .about-column img{
@@ -243,7 +243,7 @@ section{
 }
 
 .about-column h2{
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .about-text{
@@ -266,7 +266,7 @@ section{
 
 
 .about-together-section{
-    margin: 10px 0 20px 0;
+    margin: 20px 0 70px 0;
 }
 
 /*FOOTER*/
